@@ -63,7 +63,8 @@ public:
 	int			GetNumLevels() const;
 	void		EndLevel(std::optional<int> nextLevel, std::optional<int> startPosIndex);
 	GameStatus	GetGameStatus();
-	void		FlipMap(int flipmap);
+	void		FlipMap(int group);
+	bool		GetFlipMapStatus(std::optional<int> group);
 	void		SaveGame(int slot);
 	void		LoadGame(int slot);
 	void		DeleteSaveGame(int slot);
