@@ -2,6 +2,7 @@ Version 1.4
 ===========
 
 * Fixed drawing of display sprites in title level.
+* Fixed drawing of smoke sprites and various other sprites.
 * Fixed player holster state and current vehicle not preserved correctly on level jump.
 * Fixed fade-in and fade-out effects not canceling correctly when next level is loaded.
 * Fixed shadows still being visible after shattering a moveable.
@@ -23,6 +24,7 @@ Version 1.4
 
 Lua API changes:
 * Added resetHub flag to Flow.Level, which allows to reset hub data.
+* Added Flow.GetFlipMapStatus() function to get current flipmap status.
 * Added Moveable:GetMeshCount() function to get number of moveable meshes.
 * Added Static:GetHP() and Static:SetHP() functions to change shatterable static mesh hit points.
 
